fixed the margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -673,6 +673,8 @@ body{
         line-height: 1.5;
         margin-top: 1rem;
         margin-bottom: 1rem;
+        margin-left: -3rem;
+        margin-right: -3rem;
       }
       .maintitle{
         font-size: 16px;
